kyverno/policy-test.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels: 
    run: nginx
  name: nginx
spec: 
  containers: 
  - image: nginx
    name: nginx
dnsPolicy: ClusterFirst
restartPolicy: Always
